# basyx-pdf-to-aas

./: .gitignore  Dockerfile  README.md  demo-requirements.txt  dev-requirements.txt  docker-compose.yml  eval-requirements.txt  generate_requirements.bat  generate_requirements.sh  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: mypy.yml  pyinstaller-demo-gradio-win.yml  test.yml
examples/: default_toolchain.py  demo_gradio.py  demo_gradio.spec  dummy.py  pdf2htmlEX_eclass_openaiGPT3_csv.py  pdf2htmlEX_eclass_openai_csv.py  pdfium_eclass_openaiGPT3_csv.py  pdfium_eclass_openai_csv.py  txt_eclass_custom_csv.py
pdf2aas/: __init__.py  core.py  dummy.py  example.py  main.py
pdf2aas/aas_submodel_generator/: __init__.py  core.py
pdf2aas/dictionary/: __init__.py  core.py  eclass.py
pdf2aas/eclass_extractor/: __init__.py  core.py
pdf2aas/extractor/: __init__.py  core.py  propertyLLMOpenAI.py
pdf2aas/generator/: __init__.py  core.py  csv.py
pdf2aas/pdf2html/: __init__.py  core.py
pdf2aas/preprocessor/: __init__.py  core.py  pdf2htmlEX.py
pdf2aas/property_extractor/: __init__.py  core.py
pdf2aas/tests/: test_aas_submodel_generator.py  test_dictionary.py  test_extractor.py  test_generator.py  test_preprocessor.py
src/pdf2aas/: __init__.py  core.py  dummy.py  example.py
src/pdf2aas/dictionary/: __init__.py  cdd.py  classDefinition.py  core.py  eclass.py  etim.py
src/pdf2aas/evaluation/: __init__.py  aas.py  article.py  core.py  prompt.py
src/pdf2aas/extractor/: __init__.py  core.py  customLLMClient.py  custom_llm_client.py  property.py  propertyLLM.py  propertyLLMMap.py  propertyLLMOpenAI.py  propertyLLMSearch.py  property_llm.py  property_llm_search.py
src/pdf2aas/generator/: __init__.py  aas.py  aasTechnicalDataSubmodel.py  aasTemplate.py  aas_technical_data_submodel.py  aas_template.py  core.py  csv.py
src/pdf2aas/model/: __init__.py  classDefinition.py  property.py  propertyDefinition.py  property_definition.py
src/pdf2aas/preprocessor/: __init__.py  core.py  pdf2htmlEX.py  pdf_camelot.py  pdf_pdf2htmlEX.py  pdf_pdfium2.py  pdfium.py  text.py
src/pdf2aas/preprocessor/pdf/: camelot.py  pdf2html_ex.py  pdfium2.py  pdfplumber_.py  pdfplumber_table.py
tests/: test_dictionary.py  test_evaluation.py  test_extractor.py  test_generator.py  test_preprocessor.py
tests/assets/: dummy-result-aas-template-empty.aasx  dummy-result-aas-template.aasx  dummy-result-technical-data-submodel-empty.json  dummy-result-technical-data-submodel.json  dummy-result.csv
