[project]
authors = [
  {name = "Julian Vogel", email = "julian.vogel@sms-group.com"},
  {name = "Christian Malek", email = "christian.malek@iese.fraunhofer.de"},
]
dependencies = [
  "pydantic",
  "pydantic-settings",
  "openai",
  "beautifulsoup4",
  "requests",
  "python-dotenv",
  "pypdfium2",
  "camelot-py[cv]",
  "basyx-python-sdk@git+https://github.com/JGrothoff/basyx-python-sdk@pdf-to-aas",
  "xlrd",
]
name = "pdf2aas"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest",
  "pyinstaller",
]
demo = [
  "gradio==4.41.0",
  "fastapi==0.112.4",
  "gradio_pdf",
  "pandas",
  "openpyxl",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]


[tool.ruff.lint]
select = ["ALL"]